%% Class Diagram - Domain Model
classDiagram
  class Etudiant {
    +int id
    +string nom_complet
    +string email
    +string mot_de_passe
    +string niveau_actuel
    +bool is_active
    +verify_password(pwd) bool
  }
  class ConceptMastery {
    +int id
    +int etudiant_id
    +string concept_neo4j_id
    +float niveau_maitrise (0-100)
    +datetime derniere_mise_a_jour
  }
  class Quiz {
    +int id
    +string titre
    +string module
    +string difficulte
    +JSON questions
    +datetime date_creation
    +grade(answers) float
  }
  class QuizResult {
    +int id
    +int etudiant_id
    +int quiz_id
    +float score
    +int temps_reponse
    +JSON reponses
    +datetime date_tentative
  }
  class TutorSession {
    +int id
    +int etudiant_id
    +string concept_id
    +datetime created_at
    +datetime updated_at
  }
  class Module {
    <<Neo4j>>
    +string id
    +string name
    +int order
  }
  class Concept {
    <<Neo4j>>
    +string id
    +string name
    +string difficulty
  }
  class Resource {
    <<Neo4j>>
    +string id
    +string type
    +string url
  }
  Etudiant "1" o-- "*" ConceptMastery
  Etudiant "1" o-- "*" QuizResult
  Etudiant "1" o-- "*" TutorSession
  Quiz "1" o-- "*" QuizResult
  ConceptMastery ..> Concept : references
  TutorSession ..> Concept : references
  Module "1" --> "*" Concept : COVERS
  Concept --> Concept : REQUIRES
  Resource "1" --> "*" Concept : REMEDIATES_TO
